--- a/css/styles.css
+++ b/css/styles.css
@@ -1583,14 +1583,14 @@ a.list-group-item:hover, a.list-group-item:focus {
 }
 
 .list-group-item-heading {
-    font-size: 14px !important;
-    text-transform: uppercase !important;
+    font-size: 16px !important;
     font-weight: 900 !important;
 }
 
 .list-group-item-text {
-    font-size: 14px !important;
+    font-size: 12px !important;
     font-weight: 600 !important;
+    text-transform: uppercase;
 }
 
 .list-group-item:last-child {
